--- a/src/App.scss
+++ b/src/App.scss
@@ -418,7 +418,7 @@ button {
   .contact {
     display: flex;
     align-self: flex-start;
-    margin-left: 3rem;
+    padding: 0;
     gap: 1rem;
     .contact-icon {
       display: flex;
