--- a/src/App.scss
+++ b/src/App.scss
@@ -72,7 +72,7 @@ body {
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   .section-container {
     margin: 2rem auto;
-    width: 85%;
+    width: 95%;
     height: 85%;
     background-color: $light-pale-yellow;
     border-radius: 2rem;
@@ -406,65 +406,74 @@ button {
 
 .about {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   color: $dark-brown;
   padding: 1.5rem;
-  p {
-    margin: 1rem 0;
-    hyphens: auto;
-  }
-  .about-img {
-    border: 1px solid black;
-  }
-  .contact {
+  .about-body {
     display: flex;
-    align-self: flex-start;
-    padding: 0;
-    gap: 1rem;
-    .contact-icon {
+    justify-content: center;
+    align-items: center;
+    p {
+      margin: 1rem 0;
+      hyphens: auto;
+    }
+    .about-img {
+      border: 1px solid black;
+    }
+    .contact {
       display: flex;
-      width: 2.5rem;
-      height: 2.5rem;
-      font-size: 2.5rem;
+      align-self: flex-start;
+      padding: 0;
+      margin: 3rem 0;
+      gap: 1rem;
+      li {
+        a {
+          width: 2.5rem;
+        }
+        display: flex;
+        width: 2.5rem;
+        height: 2.5rem;
+        font-size: 2.5rem;
+      }
     }
   }
   @media only screen and (min-width: 320px) and (max-width: 767px) {
-    flex-direction: column;
-    .about-img {
-      order: 0;
-      height: 12rem;
-    }
-    .about-text {
-      order: 2;
+    .about-body {
+      flex-direction: column;
+      .about-img {
+        order: 0;
+        height: 12rem;
+        width: 90%;
+      }
+      .about-text {
+        order: 1;
+        width: 90%;
+      }
     }
   }
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
-    flex-direction: column;
-    align-items: center;
     .about-body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-direction: column;
       .about-text {
         order: 1;
-        width: 60%;
+        width: 70%;
         margin: 0 1rem;
       }
       .about-img {
         order: 0;
         height: 15rem;
-        width: 30%;
+        width: 70%;
         margin: 1rem;
       }
     }
   }
-
   @media only screen and (min-width: 1025px) {
-    flex-direction: column;
-    align-items: center;
     .about-body {
       display: flex;
       justify-content: center;
-      width: 90%;
+      align-items: center;
+      width: 85%;
       .about-text {
         order: 0;
         width: 60%;
@@ -473,7 +482,7 @@ button {
       }
       .about-img {
         order: 1;
-        height: 15rem;
+        height: 90%;
         width: 30%;
         margin: 1rem;
       }
@@ -489,25 +498,28 @@ button {
   justify-content: center;
   height: auto;
 }
-
 .projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: $dark-yellow;
   padding: 1rem;
   .projects-list {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
   }
   .project-card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     background-color: $light-pale-yellow;
     border-radius: 2rem;
     .project-img {
       border: 1px black solid;
-      height: 60%;
+      height: 40%;
+      min-height: 40%;
       width: 100%;
       border-radius: 0.3rem;
       align-self: center;
@@ -528,57 +540,64 @@ button {
         font-size: 1.2rem;
       }
     }
-    p {
+    .description {
       font-weight: 400;
       font-size: 0.9rem;
+      margin: 0.5rem 0;
     }
     .stack {
       display: flex;
-      justify-content: center;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-self: center;
       width: 100%;
       padding: 0;
+      margin: 0;
       li {
         text-align: center;
         font-size: 0.8rem;
         background-color: $med-green;
         width: 4.5rem;
         border-radius: 0.6rem;
-        margin: 0 0.2rem;
+        margin: 0.2rem;
       }
     }
   }
   @media only screen and (min-width: 320px) and (max-width: 767px) {
     .project-card {
+      margin: 0.5rem;
+      padding: 1.5rem;
+      width: 100%;
       height: 20rem;
+      .title-box {
+        flex-direction: column;
+      }
+    }
+  }
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .project-card {
+      height: 20rem;
+      width: 20rem;
       margin: 0.5rem;
       padding: 1.5rem;
       .title-box {
         flex-direction: column;
       }
-      .stack {
-        flex-wrap: wrap;
-        gap: 0.3rem;
-        li {
-          width: 5.5rem;
-        }
-      }
     }
   }
-
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  }
-
   @media only screen and (min-width: 1025px) {
     margin: 4rem;
-    .projects-list {
-      width: 90%;
-      margin: auto;
-    }
     .project-card {
-      width: 25rem;
+      width: 24rem;
       height: 25rem;
       padding: 2rem;
       margin: 1rem;
+      .title-box {
+        flex-direction: row;
+      }
+      .project-img {
+        height: 50%;
+      }
     }
   }
 }
